--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
       <li class="list">Add light and dark themes</li>
       <li>Enable switching the theme</li>
     </ul>
+    <h2>Task List</h1>
+    <p id="msg">Current tasks:</p>
+    <ul>
+      <li class="list">Add visual styles1</li>
+      <li class="list">Add light and dark themes1</li>
+      <li>Enable switching the theme1</li>
+    </ul>
   </body>
 </html>
