--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
       <li class="list">Add light and dark themes1</li>
       <li>Enable switching the theme1</li>
     </ul>
+    <h3>Task List</h1>
+      <p id="msg">Current tasks:</p>
+      <ul>
+        <li class="list">Add visual styles3</li>
+        <li class="list">Add light and dark themes3</li>
+        <li>Enable switching the theme3</li>
+      </ul>
   </body>
 </html>
